# sonarbook

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
api/: .dockerignore  .env.development  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
api/scripts/: wait-for-postgres.sh
api/src/: main.py
api/src/api/: exception_handlers.py  routers.py
api/src/api/controllers/: activity_log.py  post.py  user.py
api/src/api/dependencies/: auth.py  common.py  services.py
api/src/config/: settings.py
api/src/db/: database.py  uow.py
api/src/db/mappings/: __init__.py  activity_log.py  base.py  post.py  user.py
api/src/db/migrations/: env.py
api/src/db/migrations/versions/: 1ab9cc1d1843_initial.py  541e5e89943c_activitylogidx.py
api/src/db/repositories/: activity_log.py  base.py  post.py  user.py
api/src/services/: activity_log.py  auth.py  base.py  post.py  user.py
api/src/services/exceptions/: exceptions.py
api/src/services/models/: activity_log.py  common.py  post.py  user.py
web/: Dockerfile  README.md  package-lock.json  package.json
web/src/components/: header.tsx  post.tsx
web/src/contexts/: AuthContext.tsx
web/src/pages/: _app.tsx  dashboard.tsx  index.tsx  login.tsx  register.tsx
web/src/pages/posts/: [postId].tsx
web/src/services/: api.ts  axios.ts  posts.ts  types.ts  users.ts  utils.ts
